logs/Slang/generated/hdlconv/hdlconvertor_p203.sv.log
name: hdlconvertor_p203
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p203.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p203.sv:1:15: error: forward typedef 'C2' does not resolve to a data type
typedef class C2;
              ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p203.sv:2:1: error: language feature not yet supported
class C1;
^~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p203.sv:5:1: error: language feature not yet supported
class C2;
^~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p203.sv:10:15: error: forward typedef 'C' does not resolve to a data type
typedef class C ;
              ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p203.sv:12:1: error: language feature not yet supported
C#(1, real) v2 ;
^~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p203.sv:13:1: error: language feature not yet supported
C#(.p(2), .T(real)) v3 ;
^~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p203.sv:17:1: error: language feature not yet supported
class C #(parameter p = 2, type T = int);
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
